--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="StyleSheet" href="src/style.css">
     
-    <title>World Clock </title>
+    <title>World Clock- Madeline Santana </title>
 </head>
+
 <body>
     
 <h1> World Clock </h1>
@@ -14,13 +15,12 @@
 
 
 
-
 <footer> 
-This project was coded by Madeline San and is <a href="#" target="_blank"> open sourced on Github</a>
+This project was coded by Madeline Santana and is <a href="#" target="_blank"> open sourced on Github</a>
 </footer>
 
 
-<script>
+<script sc>
 
 
 
