--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 <h2>Los Angeles🏳️/h2>
 
-<div class="date">August 15,2024 </div>
+<div class="date">August 15, 2024 </div>
 <div class="time"> 1:45:45 pm </div>
 
 </div>
@@ -43,7 +43,7 @@
 
     <h2>Los Angeles🏳️/h2>
     
-    <div class="date">August 15,2024 </div>
+    <div class="date">August 15, 2024 </div>
     <div class="time"> 1:45:45 pm </div>
     
     </div>
