putting in new CSS

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <div class="date">August 15, 2024 </div>
 </div>
 
-    <div class="time"> 1:45:45 pm </div>
+    <div class="time"> 1:45:45 <small>am</small></div>
 
 </div>
 </div>
