Update all my css and html

--- a/index.html
+++ b/index.html
@@ -40,6 +40,21 @@
     <div class="time"> 1:45:45 <small>am</small></div>
 
 </div>
+
+<div class="city">
+
+    <div>
+        <h2>Paris🚩</h2>
+        <div class="date">August 15, 2024 </div>
+    </div>
+    
+        <div class="time"> 1:45:45 <small>am</small></div>
+    
+    </div>
+
+
+
+
 </div>
 
 
