fixing issue with  JS

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="StyleSheet" href="src/style.css">
-    
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.30.1/moment.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.30.1/moment.min.js">
+        
+    </script>
 
 
 
@@ -30,7 +30,7 @@
 </select>
 
 
-<div class="city">
+<div class="city" id="los-angeles">
 
 <div>
     <h2>Los Angeles🏳️</h2>
@@ -41,7 +41,7 @@
 
 </div>
 
-<div class="city">
+<div class="city" id="pair">
 
     <div>
         <h2>Paris🚩</h2>
@@ -60,7 +60,7 @@
 
 
 <footer> 
-This project was coded by Madeline Santana and is <a href="https://github.com/pracitce/World-Clock-" target="_blank"> open sourced on Github</a>
+This project was coded by <strong>Madeline Santana</strong> and is <a href="https://github.com/pracitce/World-Clock-" target="_blank"> open sourced on Github</a>
 </footer>
 
 
