--- a/index.html
+++ b/index.html
@@ -4,13 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="StyleSheet" href="src/style.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.30.1/moment.min.js">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.37/moment-timezone-with-data-1970-2030.min.js"></script>
 
-    </script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.45/moment-timezone.min.js">
-
-</script>
-
+   
 
     <title>WorldClock- Madeline Santana </title>
 </head>
@@ -31,30 +28,29 @@
 
 </select>
 
-
-<div class="city" id="los-angeles">
-
-<div>
-    <h2>Los Angeles🏳️</h2>
-    <div class="date"></div>
-</div>
-
-    <div class="time"></div>
-
-</div>
-
-<div class="city" id="paris">
-
-    <div>
-        <h2>Paris🚩</h2>
+<div id="cities">
+    <div class="city" id="los-angeles">
+      <div>
+        <h2>Los Angeles</h2>
         <div class="date"></div>
+      </div>
+      <div class="time"></div>
     </div>
-        <div class="time"></div>
-        </div>
-  
+    <div class="city" id="paris">
+      <div>
+        <h2>Paris</h2>
+        <div class="date"></div>
+      </div>
+      <div class="time"></div>
+    </div>
+  </div>
 </div>
 
-</div>
+
+
+
+
+
 
 
 
