update most of my css and js

--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
     <div class="container">
 <h1> World 💙Clock 🤗</h1>
 
-<select>
+<select id="city">
     
     <option value="">Select a City </option>
-    <option value="">london</option>
-    <option value ="">Delware</option>
-    <option value ="">New York</option>
-    <option value ="">Okland </option>
+    <option value="Europe Londan">London</option>
+    <option value ="America/New_York">New York</option>
+    <option value ="Pacific/Auckland">Auckland </option>
+    
 
 
 </select>
