--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <select id="city">
     
     <option value="">Select a City </option>
-    <option value="Europe Londan">London</option>
+    <option value="Europe/Londan">London</option>
     <option value ="America/New_York">New York</option>
     <option value ="Pacific/Auckland">Auckland </option>
     
