add link to all cities

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 <body>
 
     <div class="container">
-<h1> World 💙Clock 🤗</h1>
+<h1> 
+    <a href="index.html"> World💙Clock</a> 🤗</h1>
 
 <select id="city">
     
